--- a/styles/styles.css
+++ b/styles/styles.css
@@ -123,7 +123,11 @@ letter-spacing: 0.03em;
 color: #757575;
 }
 
-.footer-adress link
+.footer-title {
+    background: #2F303A;
+}
+
+.footer-adress
 {
 font-weight: 400;
 font-size: 14px;
@@ -132,10 +136,41 @@ letter-spacing: 0.03em;
 color: #FFFFFF;
 }
 
-.footer-mail-link link,
-.footer-tel-link link
-{font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-       color: rgba(255, 255, 255, 0.6);}
+.footer-mail-link,
+.footer-tel-link {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.portfolio-btn {
+font-family: "Roboto", sans-serif;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.62;
+
+letter-spacing: 0.03em;
+color: #212121;
+}
+
+.work-name {
+font-weight: 700;
+font-size: 18px;
+line-height: 2.0;
+letter-spacing: 0.06em;
+color: #212121;
+}
+
+.work-description {
+font-weight: 400;
+font-size: 16px;
+line-height: 1.88;
+/* identical to box height, or 188% */
+letter-spacing: 0.03em;
+color: #757575;
+}
+
+
