--- a/styles/styles.css
+++ b/styles/styles.css
@@ -83,6 +83,8 @@ a {
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
+   color: var(--white-color);
+  background: var(--accent-color);
 
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -90,8 +92,8 @@ a {
 }
 .hero-btn:hover,
 .hero-btn:focus {
-  color: var(--white-color);
-  background: var(--accent-color);
+  color: var( --main-color);
+  background: var(--white-color);
 }
 
 .hero {
