--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,14 @@
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::after,
+*::before {
+	box-sizing: inherit;
+}
+
+
 :root {
   --main-color: #212121;
   --second-font: "Raleway", sans-serif;
@@ -20,7 +31,13 @@ h5,
 h6,
 p,
 li {
-  margin: 0;
+  margin-top: 0;
+}
+
+img {
+	display: block;
+	max-width: 100%;
+	height: auto;
 }
 
 a {
@@ -56,6 +73,8 @@ a {
   text-decoration: none;
   align-items: center;
   margin-right: 93px;
+  padding-top: 24px;
+  padding-bottom: 25px;
 }
 
 .first-part {
@@ -80,6 +99,9 @@ a {
 .list {
   display: flex;
   list-style: none;
+  list-style: none;
+	padding-left: 0;
+	margin: 0;
 }
 
 .header-nav {
@@ -137,6 +159,12 @@ a {
 
 .hero {
   margin-bottom: 30px;
+  ;
+}
+
+.hero-height {
+  padding-top: 200px;
+  padding-bottom: 200px
 }
 
 .hero-btn {
@@ -146,21 +174,27 @@ a {
   line-height: 1.87;
   display: flex;
   align-items: center;
-  text-align: center;
+  justify-content: center;
   letter-spacing: 0.06em;
   color: var(--white-color);
   background: var(--accent-color);
   margin-left: auto;
   margin-right: auto;
+  weight: 216px;
+  height: 50px;
 
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  border: 0px;
   cursor: pointer;
+
+  
 }
 .hero-btn:hover,
 .hero-btn:focus {
   color: var(--main-color);
   background: var(--white-color);
+  background: #188CE8;
 }
 
 .hero {
@@ -172,6 +206,8 @@ a {
   text-transform: uppercase;
   color: var(--white-color);
 }
+
+.character {padding-bottom: 0px;}
 
 .specifics {
   margin: 0px;
@@ -216,6 +252,12 @@ a {
   margin-right: 30px;
 }
 
+.item-box {
+  background: #FFFFFF;
+border-radius: 0px 0px 4px 4px;
+
+}
+
 .team-section-back {
   background: #f5f4fa;
 }
@@ -241,6 +283,8 @@ a {
 
 .footer-title {
   background: #2f303a;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .footer-last-part {
@@ -256,16 +300,18 @@ a {
 .footer-list {
   list-style: none;
   padding-left: 0px;
-  margin: 0px;
+
 }
+
 
 .footer-adress {
   font-weight: 400;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #ffffff;
-  margin-bottom: 9px;
+ 
 }
+
 
 .footer-mail-link,
 .footer-tel-link {
@@ -295,6 +341,9 @@ a {
   color: var(--main-color);
   cursor: pointer;
 
+  padding: 6px 22px;
+  border: 0px;
+
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
@@ -310,12 +359,13 @@ a {
   flex-wrap: wrap;
   margin: 0px;
   padding: 0px;
+  gap: 30px;
 }
+/* .portfolio-work {
+  background: #FFFFFF;
 
-.portfolio-work {
-  margin-right: 30px;
-  margin-bottom: 30px;
-}
+
+} */
 
 .portfolio-work:nth-child(3n) {
   margin-right: 0px;
@@ -327,6 +377,10 @@ a {
 
 .portfolio-examples {
   padding: 20px 24px;
+  border-bottom: 1px solid #EEEEEE;
+  border-left: 1px solid #EEEEEE;
+  border-right: 1px solid #EEEEEE;
+
 }
 
 .work-name {
