--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,7 +30,7 @@ h5,
 h6,
 p,
 li {
-  margin-top: 0;
+  margin: 0;
 }
 
 img {
@@ -363,8 +363,7 @@ a {
   padding: 6px 22px;
   border: 0px;
 
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  
   border-radius: 4px;
 }
 
@@ -372,6 +371,8 @@ a {
 .portfolio-btn:focus {
   color: var(--white-color);
   background: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-name {
