--- a/styles/styles.css
+++ b/styles/styles.css
@@ -147,16 +147,36 @@ a {
   color: var(--description-color);
 }
 
+/* ПРИБРАТИ */
+.header-mail-icon {
+  background: #2196F3;
+}
+
+
+
 .header-mail-link {
   margin-right: 50px;
 }
 
 .hero-sec {
-  background: #2f303a;
+  /* background: #2f303a; */
   text-align: center;
   padding-top: 200px;
   padding-bottom: 200px;
+
+max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color:#C4C4C4; 
+  background-image: linear-gradient(to right,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url(../img/Img-background.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;  
 }
+  
+
+  
+
 
 .hero {
   margin-bottom: 30px;
@@ -215,6 +235,17 @@ a {
 
 .character {
   padding-bottom: 0px;
+}
+
+.character-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 270px;
+  height: 120px;
+  background: #F5F4FA;
+border-radius: 4px;
+
 }
 
 .specifics {
