--- a/styles/styles.css
+++ b/styles/styles.css
@@ -98,8 +98,7 @@ a {
 .list {
   display: flex;
   list-style: none;
-  list-style: none;
-  padding-left: 0;
+   padding-left: 0;
   margin: 0;
 }
 
@@ -145,11 +144,6 @@ a {
   letter-spacing: 0.02em;
 
   color: var(--description-color);
-}
-
-/* ПРИБРАТИ */
-.header-mail-icon {
-  background: #2196F3;
 }
 
 
@@ -317,6 +311,25 @@ border-radius: 4px;
   font-size: 16px;
   line-height: 1.18;
   color: var(--description-color);
+}
+
+.socials {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.socials-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 44px;
+  height: 44px;
+
+  background: var(--white-color);
+  border-radius: 50%;
+  padding-left: 32px;
 }
 
 .footer-title {
