--- a/styles/styles.css
+++ b/styles/styles.css
@@ -124,37 +124,7 @@ a {
 .header-contacts {
   display: inline-flex;
   align-items: center;
-  
-}
-
-.header-mail-icon {
- 
-  margin-right: 10px;
-  fill: var(--accent-color);
-  
-}
-
-.header-tel-icon {
-  margin-right: 10px;
-  fill: #757575;
-}
-
-
-.header-nav-link {
-  font-weight: 500;
-  line-height: 1.33;
-  letter-spacing: 0.02em;
-  color: var(--main-color);
-}
-
-.header-nav-link:hover,
-.header-nav-link:focus {
-  color: var(--accent-color);
-}
-
-.ref-color {
-  color: var(--accent-color);
-}
+  }
 
 .header-mail-link,
 .header-tel-link {
@@ -166,10 +136,46 @@ a {
    color: var(--description-color);
 }
 
+.header-nav-link:hover,
+.header-nav-link:focus {
+  color: var(--accent-color);
+}
 
 .header-mail-link {
   margin-right: 50px;
 }
+
+
+.header-mail-icon,
+.header-tel-icon {
+  margin-right: 10px;
+  fill: #757575;
+}
+
+
+.header-tel-icon:hover,
+.header-tel-icon:focus {
+  fill: var(--accent-color);
+} 
+
+.header-mail-icon:hover,
+.header-mail-icon:focus {
+  fill: var(--accent-color);
+} 
+
+
+.header-nav-link {
+  font-weight: 500;
+  line-height: 1.33;
+  letter-spacing: 0.02em;
+  color: var(--main-color);
+}
+
+.ref-color {
+  color: var(--accent-color);
+}
+
+
 
 .hero-sec {
   /* background: #2f303a; */
@@ -256,6 +262,7 @@ max-width: 1600px;
   justify-content: center;
   width: 270px;
   height: 120px;
+  margin-bottom: 30px;
   background: #F5F4FA;
 border-radius: 4px;
 
@@ -351,7 +358,7 @@ border-radius: 4px;
   width: 44px;
   height: 44px;
 
-  background: var(--white-color);
+  color: #AFB1B8;
   border-radius: 50%;
   
 }
@@ -359,6 +366,11 @@ border-radius: 4px;
 .socials-link:hover,
 .socials-link:focus {
   background: var(--accent-color);
+  color: var(--white-color);
+}
+
+.socials-icon {
+  fill: currentColor;
 }
 
 .clients-list {
@@ -403,6 +415,7 @@ border-radius: 4px;
 
   .footer-container {
     display: flex;
+    align-items: baseline;
     gap: 70px;
   }
 
@@ -456,6 +469,11 @@ border-radius: 4px;
 .footer-socials-name {
   color: var(--white-color);
   margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 
 
@@ -469,13 +487,14 @@ border-radius: 4px;
 
   border-radius: 50%;
     background: rgba(255, 255, 255, 0.1);
+    color: var(--white-color);
+    fill: var(--white-color);
   }
 
   .socials-link-footer:hover,
 .socials-link-footer:focus {
   background: var(--accent-color);
-  fill: currentColor;
-}
+   }
 
 .btn-center {
   justify-content: center;
