--- a/styles/styles.css
+++ b/styles/styles.css
@@ -538,6 +538,57 @@ color: var(--white-color);
   background: var(--accent-color);
    }
 
+   .footer-form
+   {
+    display: flex;
+   }
+
+   .footer-input {
+    width: 358px;
+    height: 50px;
+    padding-left: 16px;
+    background-color: #2F303A;
+    margin-right: 12px;
+
+    border: 1px solid rgba(255, 255, 255, 0.3);
+filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+border-radius: 4px;
+border-color: var(--accent-color);
+
+   }
+
+   .footer-btn-sub {
+display: flex;
+
+    width: 200px;
+    height: 50px;
+    padding-left: 28px;
+    align-items: center;
+    text-align: center;
+    background: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+border-color: var(--accent-color);
+   }
+
+   .footer-subscribe
+   {font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    margin-right: 10px;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+        color: var(--white-color);
+ 
+   }
+
+   .footer-subscribe-icon {
+    fill: var(--white-color);
+  
+   }
+
+
 .btn-center {
   justify-content: center;
 
@@ -673,9 +724,10 @@ color: var(--white-color);
 }
 
 .modal {
-  position: absolute;
+    position: absolute;
   top: 50%;
   left: 50%;
+  padding: 40px;
   transform: translateX(-50%) translateY(-50%);
   width: 528px;
   height: 581px;
@@ -709,3 +761,86 @@ border: 1px solid rgba(0, 0, 0, 0.1);
   
   cursor: pointer;
 }
+
+.modal-title {
+  margin-bottom: 12px;
+  font-weight: 700;
+font-size: 20px;
+line-height: 1.15;
+text-align: center;
+letter-spacing: 0.03em;
+
+color: #212121;
+}
+
+.form-field {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.form-icon {
+  position: absolute;
+  bottom: 11px;
+  left: 12px;
+  display: block;
+  
+}
+
+.form-label {
+    margin-bottom: 4px;
+  font-weight: 400;
+font-size: 12px;
+line-height: 1.16;
+
+letter-spacing: 0.01em;
+
+color: var(--description-color);
+}
+
+.form-input {
+  width: 448px;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+border-radius: 4px;
+}
+
+.form-message {
+  resize: none;
+  width: 448px;
+  height: 120px;
+}
+
+.form-license {
+  color: var(--description-color);
+}
+
+.form-license-text {
+  text-decoration: underline;
+}
+
+
+.form-btn {
+  font-style: normal;
+font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--white-color);
+  background: var(--accent-color);
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  width: 200px;
+  height: 50px;
+  letter-spacing: 0.06em;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: none;
+}
+
+
+
