--- a/styles/styles.css
+++ b/styles/styles.css
@@ -772,6 +772,10 @@ letter-spacing: 0.03em;
 color: #212121;
 }
 
+.form-group {
+  margin-bottom: 20px;
+}
+
 .form-field {
   position: relative;
   display: flex;
@@ -816,7 +820,7 @@ padding-left: 42px;
 }
 
 .form-input-com {
- 
+  outline: transparent;
   border: 1px solid rgba(33, 33, 33, 0.2);
 border-radius: 4px;
 padding-top: 12px;
@@ -824,7 +828,9 @@ padding-left: 16px;
 
 }
 
-.form-field:focus-within > .form-input {
+.form-input:focus,
+.form-input-com:focus {
+  outline: transparent;
   border: 1px solid #2196F3;
  }
 
@@ -832,12 +838,46 @@ padding-left: 16px;
   fill: var(--accent-color);
  }
 
+ .checkbox-box {
+  display: flex;
+justify-content: center;
+ 
+
+ }
+ .checkbox {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+ }
+
+ .checkbox-icon {
+  display: inline-block;
+width: 16px;
+height: 15px;
+border: 2px solid #212121;
+border-radius: 4px;
+margin-right: 7px;
+}
+
+.checkbox:checked + .checkbox-icon {
+  border-color: var(--accent-color);
+  background-color: var(--accent-color);
+  background-image: url(../img/check.svg);
+  background-size: contain;
+  /* background-origin: border-box; */
+}
+
 .form-license {
   color: var(--description-color);
+ 
 }
 
 .form-license-text {
   text-decoration: underline;
+ 
 }
 
 
