--- a/styles/styles.css
+++ b/styles/styles.css
@@ -553,7 +553,7 @@ color: var(--white-color);
     border: 1px solid rgba(255, 255, 255, 0.3);
 filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 border-radius: 4px;
-border-color: var(--accent-color);
+border-color: rgba(255, 255, 255, 0.3);
 
    }
 
@@ -761,6 +761,11 @@ border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: pointer;
 }
 
+.icon-close:hover,
+.icon-close:focus {
+  fill: var(--accent-color);
+}
+
 .modal-title {
   margin-bottom: 12px;
   font-weight: 700;
@@ -841,7 +846,7 @@ padding-left: 16px;
  .checkbox-box {
   display: flex;
 justify-content: center;
- 
+cursor: pointer;
 
  }
  .checkbox {
@@ -876,7 +881,11 @@ margin-right: 7px;
 }
 
 .form-license-text {
+  display: block;
   text-decoration: underline;
+  color: var(--accent-color);
+  margin-left: 4px;
+
  
 }
 
@@ -899,6 +908,7 @@ font-weight: 700;
   letter-spacing: 0.06em;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border: none;
+  cursor: pointer;
 }
 
 
