--- a/styles/styles.css
+++ b/styles/styles.css
@@ -456,6 +456,7 @@ color: var(--white-color);
 
   .footer-container {
     display: flex;
+    justify-content: space-between;
     align-items: baseline;
     gap: 70px;
   }
@@ -549,6 +550,7 @@ color: var(--white-color);
     padding-left: 16px;
     background-color: #2F303A;
     margin-right: 12px;
+    color: var(--white-color);
 
     border: 1px solid rgba(255, 255, 255, 0.3);
 filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
