--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,5 +1,16 @@
 .container {
-    width: 1200px;
-    margin: 0 auto;
-    padding: 0 15px;
+  margin: 0 auto;
+  padding: 0 15px;
+
+  @media screen and (min-width: $mobile) {
+    width: $mobile;
   }
+
+  @media screen and (min-width: $tablet) {
+    width: $tablet;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: $desktop;
+  }
+}
