--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -67,8 +67,9 @@
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  .portfolio__work--wrapper:hover & {
-    transform: translateY(0%);
+  .portfolio__work--wrapper:hover &,
+  .portfolio__work--wrapper:focus & {
+  transform: translateY(0%);
   }
 }
 
