--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -1,8 +1,15 @@
 .title {
     text-align: center;
     font-weight: 700;
-    font-size: 36px;
+    font-size: 28px;
     line-height: 1.16;
     color: var(--main-color);
-    margin-bottom: 50px;
+    margin-bottom: 30px;
+
+    
+    @media screen and (min-width: $desktop) {
+      font-size: 36px;
+      margin-bottom: 50px;
+    }
+
   }
