--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -4,4 +4,9 @@
     --accent-color: #2196f3;
     --white-color: #ffffff;
     --description-color: #757575;
+
+    // BREAKPOINTS
+$mobile: 480px;
+$tablet: 768px;
+$desktop: 1200px;
   }
